Fix overflow

--- a/style/style.scss
+++ b/style/style.scss
@@ -54,7 +54,7 @@ header {
     }
 }
 
-// Content
+// albumVue
 
 #albumVue {
     width: 100vw;
@@ -83,6 +83,12 @@ header {
             display: flex;
             flex-direction: column;
             align-items: right;
+
+            #player {
+                display: block;
+                border: solid 3px $gold;
+                margin-top: 14px;
+            }
         }
     
         img {
@@ -97,29 +103,24 @@ header {
             width: 50%;
         }
     }
-}
 
-#player {
-    display: block;
-    border: solid 3px $gold;
-    margin-top: 14px;
-}
-
-$numberOfAlbumsInRandomVue: 11;
-
-#randomVue {
-    display: flex;
-    // height: 15vh;
-    border-top: solid 10px $gold;
-    img {
-        height: 100vw / $numberOfAlbumsInRandomVue;
-        width: 100vw / $numberOfAlbumsInRandomVue;
-
-        &:hover {
-            cursor: pointer;
+    footer {
+        $numberOfAlbumsInRandomVue: 11;
+        display: flex;
+        // height: 15vh;
+        border-top: solid 10px $gold;
+        img {
+            height: 100vw / $numberOfAlbumsInRandomVue;
+            width: 100vw / $numberOfAlbumsInRandomVue;
+    
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 }
+
+// atticVue
 
 #atticVue {
     // Dirty hack
@@ -130,4 +131,5 @@ $numberOfAlbumsInRandomVue: 11;
         height: 100px;
         width: 100px;
     }
+    padding: 50px 20px;
 }
